--- a/src/app/integration/main/main.component.html
+++ b/src/app/integration/main/main.component.html
@@ -4,13 +4,13 @@
   <div class="side-nav-bar">
     <div fxLayout="row" fxLayoutAlign="space-between center" class="navbar--logo-section side-nav-bar--logo-header-section">
       <div class="navbar--fyle-logo">
-        <img alt="Fyle" src="assets/images/svgs/logo/fyle.svg" width="70px" height="60px"/>
+        <img alt="Fyle" src="assets/images/svgs/logo/fyle.svg" width="80px" height="60px"/>
       </div>
       <div class="navbar--plus">
         +
       </div>
       <div>
-        <img alt="Quickbooks Online" src="assets/images/svgs/logo/qbo.svg" width="110px" height="60px" class="navbar--qbo-logo" />
+        <img alt="Xero" src="assets/images/svgs/logo/xero.svg" width="70px" height="60px" class="navbar--xero-logo" />
       </div>
     </div>
     <div *ngFor="let module of modules" class="side-nav-bar--default-text-color">
