--- a/src/app/shared/components/export-log/export-log-table/export-log-table.component.html
+++ b/src/app/shared/components/export-log/export-log-table/export-log-table.component.html
@@ -44,7 +44,7 @@
 
   <ng-container *ngIf="displayedColumns.indexOf('exportType') !== -1" matColumnDef="exportedAt" matColumnDef="exportType">
     <th mat-header-cell *matHeaderCellDef>
-      <h4>Exported to QBO as</h4>
+      <h4>Exported to Xero as</h4>
     </th>
     <td [ngClass]="{'pointer': element.fyleReferenceType !== FyleReferenceType.EXPENSE && allowChildViewing}" (click)="openChildExpenses(element)" mat-cell *matCellDef="let element"> {{element.exportedAs | titlecase}} </td>
   </ng-container>
@@ -53,8 +53,8 @@
     <th mat-header-cell *matHeaderCellDef>
       <h4>Link to {{externalUrlType}}</h4>
     </th>
-    <td mat-cell *matCellDef="let element" class="export-log-table--open-in-qbo">
-      <img class="pointer" src="assets/images/svgs/actions/open-in-new-tab.svg" (click)="helperService.openExternalLink(externalUrlType === 'QBO' ? element.qboUrl : element.fyleUrl)"/>
+    <td mat-cell *matCellDef="let element" class="export-log-table--open-in-xero">
+      <img class="pointer" src="assets/images/svgs/actions/open-in-new-tab.svg" (click)="helperService.openExternalLink(externalUrlType === 'Xero' ? element.xeroUrl : element.fyleUrl)"/>
     </td>
   </ng-container>
 
