--- a/src/app/integration/main/dashboard/dashboard.component.scss
+++ b/src/app/integration/main/dashboard/dashboard.component.scss
@@ -185,7 +185,7 @@
     padding-bottom: 20px;
   }
 
-  &--qbo-error {
+  &--xero-error {
     font-size: 14px;
     padding: 20px 24px;
   }
@@ -202,7 +202,7 @@
     padding-right: 4px;
   }
 
-  &--qbo-error-short-description {
+  &--xero-error-short-description {
     padding-top: 8px;
     font-size: 12px;
     width: 750px;
