--- a/src/app/shared/components/configuration/configuration-toggle-field/configuration-toggle-field.component.scss
+++ b/src/app/shared/components/configuration/configuration-toggle-field/configuration-toggle-field.component.scss
@@ -38,3 +38,7 @@
 .configuration--field-toggle-section:nth-child(1){
   padding-bottom: 0px;
 }
+
+.configuration--field-toggle-note-section{
+  padding-left: 32px;
+}
