Pr command resove commit

--- a/src/app/shared/components/configuration/import-settings/import-settings.component.html
+++ b/src/app/shared/components/configuration/import-settings/import-settings.component.html
@@ -36,7 +36,7 @@
 
         <app-configuration-toggle-field [form]="importSettingsForm"
           [label]="'Import Xero customers as Projects in Fyle'"
-          [subLabel]="'The imported Departments from Xero will be a selectable field while creating an expense.'"
+          [subLabel]="'The imported Customers from Xero will be a selectable field while creating an expense.'"
           [formControllerName]="'importCustomers'">
         </app-configuration-toggle-field>
 
