--- a/src/app/integration/onboarding/onboarding-landing/onboarding-landing.component.html
+++ b/src/app/integration/onboarding/onboarding-landing/onboarding-landing.component.html
@@ -15,9 +15,7 @@
       </div>
       <div class="landing--xero-connect-section" (click)="connectXero()">
         <div fxLayout="row" fxLayoutAlign="center center" class="landing--xero-connect-button pointer">
-          <h3 class="landing--xero-connect-text bold single-line-text">
-            Connect to Xero Account
-          </h3>
+          <img src="../../../../assets/images/svgs/actions/connect-blue.svg">
         </div>
       </div>
     </div>
