--- a/src/app/integration/onboarding/onboarding-landing/onboarding-landing.component.scss
+++ b/src/app/integration/onboarding/onboarding-landing/onboarding-landing.component.scss
@@ -50,12 +50,7 @@
     height: 48px;
   }
 
-  &--xero-connect-button {
-    background: #108000;
-    border-radius: 5px;
-    width: 318px;
-    height: 48px;
-
+  &--xero-connect-button img{
     &:hover {
       box-shadow: 0px 4px 4px rgba(44, 48, 78, 0.1);
     }
