--- a/src/app/shared/components/configuration/xero-connector/xero-connector.component.html
+++ b/src/app/shared/components/configuration/xero-connector/xero-connector.component.html
@@ -77,7 +77,7 @@
             <h4 *ngIf="!xeroConnectionInProgress && xeroTokenExpired" (click)="connectXero()" class="xero-connector--switch-org-text actionable-text align-center">
               Re-Connect to Xero
             </h4>
-            <h4 *ngIf="!xeroConnectionInProgress && showDisconnectXero" (click)="disconnectXero()" class="xero-connector--switch-org-text actionable-text align-center">
+            <h4 *ngIf="!xeroConnectionInProgress && showDisconnectXero && isXeroConnected" (click)="disconnectXero()" class="xero-connector--switch-org-text actionable-text align-center">
               Disconnect
             </h4>
           </div>
