xero-app-2 QA changes

--- a/src/app/integration/main/main.component.html
+++ b/src/app/integration/main/main.component.html
@@ -2,15 +2,15 @@
 
 <div *ngIf="!isLoading" fxLayout="row" fxLayoutAlign="start start">
   <div class="side-nav-bar">
-    <div fxLayout="row" fxLayoutAlign="space-between center" class="navbar--logo-section side-nav-bar--logo-header-section">
+    <div fxLayout="row" class="navbar--logo-section side-nav-bar--logo-header-section">
       <div class="navbar--fyle-logo">
-        <img alt="Fyle" src="assets/images/svgs/logo/fyle.svg" width="80px" height="60px"/>
+        <img alt="Fyle" src="assets/images/svgs/logo/fyle.svg" width="80px" height="30px"/>
       </div>
       <div class="navbar--plus">
         +
       </div>
       <div>
-        <img alt="Xero" src="assets/images/svgs/logo/xero.svg" width="70px" height="60px" class="navbar--xero-logo" />
+        <img alt="Xero" src="assets/images/svgs/logo/xero.svg" width="50px" height="50px" class="navbar--xero-logo" />
       </div>
     </div>
     <div *ngFor="let module of modules" class="side-nav-bar--default-text-color">
