--- a/src/app/shared/components/core/header/header.component.html
+++ b/src/app/shared/components/core/header/header.component.html
@@ -1,14 +1,14 @@
 <div fxLayout="row" fxLayoutAlign="space-between center" class="navbar">
   <div fxLayout="row" fxLayoutAlign="space-between center">
-    <div fxLayout="row" fxLayoutAlign="space-between center" class="navbar--logo-section">
+    <div fxLayout="row" class="navbar--logo-section">
       <div class="navbar--fyle-logo">
-        <img alt="Fyle" src="assets/images/svgs/logo/fyle.svg" width="80px" height="60px"/>
+        <img alt="Fyle" src="assets/images/svgs/logo/fyle.svg" width="80px" height="30px"/>
       </div>
       <div class="navbar--plus">
         +
       </div>
       <div>
-        <img alt="Xero" src="assets/images/svgs/logo/xero.svg" width="70px" height="60px" class="navbar--xero-logo" />
+        <img alt="Xero" src="assets/images/svgs/logo/xero.svg" width="50px" height="50px" class="navbar--xero-logo" />
       </div>
     </div>
     <img *ngIf="showBackButton && activePage" class="navbar--back-btn pointer" (click)="navigateBack()" src="assets/images/svgs/actions/arrow-mark-left-back.svg" />
