--- a/src/app/shared/components/configuration/import-settings/import-settings.component.scss
+++ b/src/app/shared/components/configuration/import-settings/import-settings.component.scss
@@ -30,7 +30,7 @@
   }
 
   &--xero-field-text {
-    padding: 11px 161px 11px 17px;
+    padding: 7px 161px 11px 17px;
   }
 
   &--fyle-field {
@@ -145,4 +145,7 @@
 
 p {
   margin: 0;
+}
+h5 {
+  font-size: 14px;
 }
